--- a/index.html
+++ b/index.html
@@ -67,7 +67,14 @@
         <div class="container">
           <h1 class="display-3">Jambesh's Profile ..!</h1>
           <p>Passionate about data and visualizing data to draw meaningfull insight for community and users. 
-            Love Community like Tableau Public, #MakeoverMonday to engage with felow viz lovers</p>
+            Love Community like Tableau Public, #MakeoverMonday to engage with felow viz lovers
+            <br>
+            Senior BI Analyst with experience in Analysis, Design, Development, Support of Multiple Business Intelligence Applications .Work cross-functionally across multiple business units and departments to gather business requirements and translate into technical document, 
+            following through to implementation.
+            Experience in Extract and analyze large volumes of data to understand a wide range of information about Web Analytics, ERP System. Customer Call volume analysis.
+            Deliver highly personalized and individualized reporting experiences to Biz users as per the Biz requirement.Ability to work in tandem with business partners and team to formulate and solve tractable projects.Experience in transforming data insights into actionable reports/metrics. Design and develop complex visualization  using Tableau and SAP BO .Build multiple Tableau Dashboard visualization like  Cisco Next gen Intelligent Network Dashboard,  Cisco Web Analytic Dashboard, ERP Dashboard, Service Metrics Dashboard and ensure visualization best practice.
+            
+          </p>
           <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
         </div>
       </div>
