--- a/index.html
+++ b/index.html
@@ -69,11 +69,21 @@
           <p>Passionate about data and visualizing data to draw meaningfull insight for community and users. 
             Love Community like Tableau Public, #MakeoverMonday to engage with felow viz lovers
             <br>
-            Senior BI Analyst with experience in Analysis, Design, Development, Support of Multiple Business Intelligence Applications .Work cross-functionally across multiple business units and departments to gather business requirements and translate into technical document, 
-            following through to implementation.
-            Experience in Extract and analyze large volumes of data to understand a wide range of information about Web Analytics, ERP System. Customer Call volume analysis.
-            Deliver highly personalized and individualized reporting experiences to Biz users as per the Biz requirement.Ability to work in tandem with business partners and team to formulate and solve tractable projects.Experience in transforming data insights into actionable reports/metrics. Design and develop complex visualization  using Tableau and SAP BO .Build multiple Tableau Dashboard visualization like  Cisco Next gen Intelligent Network Dashboard,  Cisco Web Analytic Dashboard, ERP Dashboard, Service Metrics Dashboard and ensure visualization best practice.
-            
+            <br>
+I am an experienced data analyst with more than 12 years of experience analyzing and interpreting high volumes of complex data.
+<br>
+My career accomplishments demonstrate comprehensive expertise in database, prepare and cleanse data ,load data into database and  translating results into actionable insights terms to inform strategic business decision and facilitate improved operations. 
+Additionally, I am fully aware of driving project life cycles and ensuring optimal data quality and integrity.
+<br>
+My strength include Quick learning and implementing new technology and train team members
+<br>
+Applying expertise in analyzing and managing large-scale database applications and generating strategic reports and data analyses to propel business success.
+Extensive experience on Visualization tool like Tableau Desktop ,Tableau Server and Operational Reporting tool like SAP Business Objects.
+Love coding using Python and Java Scripting to automate business Process ,Deployment and Data pipeline generation.
+Certified Tableau Bronze jedi   and Desktop Specialist and expertise on Visualization strategy and performance optimization
+Have proficiency across a broad range of software programs and technical tools.
+With a proven track record of spearheading complex data analysis.
+<br>
           </p>
           <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
         </div>
