--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ My career accomplishments demonstrate comprehensive expertise in database, prepa
 Additionally, I am fully aware of driving project life cycles and ensuring optimal data quality and integrity.
 <br>
 My strength include Quick learning and implementing new technology and train team members
-<br>
+<br><br>
 Applying expertise in analyzing and managing large-scale database applications and generating strategic reports and data analyses to propel business success.
 Extensive experience on Visualization tool like Tableau Desktop ,Tableau Server and Operational Reporting tool like SAP Business Objects.
 Love coding using Python and Java Scripting to automate business Process ,Deployment and Data pipeline generation.
@@ -85,7 +85,7 @@ Have proficiency across a broad range of software programs and technical tools.
 With a proven track record of spearheading complex data analysis.
 <br>
           </p>
-          <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
+          <p><a class="btn btn-primary btn-lg" href="https://public.tableau.com/profile/jambesh#!/" role="button">Learn more &raquo;</a></p>
         </div>
       </div>
 
