--- a/index.html
+++ b/index.html
@@ -116,7 +116,13 @@ With a proven track record of spearheading complex data analysis.
     </main>
 
     <footer class="container">
-      <p>&copy; Company 2017-2018</p>
+      <a href="#" class="badge badge-primary">Primary</a>
+      <a href="#" class="badge badge-secondary">Secondary</a>
+      <a href="#" class="badge badge-success">Success</a>
+      <a href="#" class="badge badge-danger">Danger</a>
+      <a href="#" class="badge badge-warning">Warning</a>
+      <a href="#" class="badge badge-info">Info</a>
+      <a href="#" class="badge badge-dark">Dark</a>
     </footer>
 
     <!-- Bootstrap core JavaScript
