--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <!-- Main jumbotron for a primary marketing message or call to action -->
       <div class="jumbotron">
         <div class="container">
-          <h1 class="display-3">Jambesh's Profile ..!</h1>
+          <h1 class="display-3">Jambesh's Profile </h1>
           <p>Passionate about data and visualizing data to draw meaningfull insight for community and users. 
             Love Community like Tableau Public, #MakeoverMonday to engage with felow viz lovers
             <br>
@@ -85,7 +85,7 @@ Have proficiency across a broad range of software programs and technical tools.
 With a proven track record of spearheading complex data analysis.
 <br>
           </p>
-          <p><a class="btn btn-primary btn-lg" href="https://public.tableau.com/profile/jambesh#!/" role="button">Learn more &raquo;</a></p>
+          <p><a class="btn btn-primary btn-lg" href="https://public.tableau.com/profile/jambesh#!/" target="_blank" role="button">Learn more &raquo;</a></p>
         </div>
       </div>
 
