--- a/index.html
+++ b/index.html
@@ -70,19 +70,27 @@
             Love Community like Tableau Public, #MakeoverMonday to engage with felow viz lovers
             <br>
             <br>
-I am an experienced data analyst with more than 12 years of experience analyzing and interpreting high volumes of complex data.
-<br>
-My career accomplishments demonstrate comprehensive expertise in database, prepare and cleanse data ,load data into database and  translating results into actionable insights terms to inform strategic business decision and facilitate improved operations. 
-Additionally, I am fully aware of driving project life cycles and ensuring optimal data quality and integrity.
-<br>
-My strength include Quick learning and implementing new technology and train team members
-<br><br>
-Applying expertise in analyzing and managing large-scale database applications and generating strategic reports and data analyses to propel business success.
-Extensive experience on Visualization tool like Tableau Desktop ,Tableau Server and Operational Reporting tool like SAP Business Objects.
-Love coding using Python and Java Scripting to automate business Process ,Deployment and Data pipeline generation.
-Certified Tableau Bronze jedi   and Desktop Specialist and expertise on Visualization strategy and performance optimization
-Have proficiency across a broad range of software programs and technical tools.
-With a proven track record of spearheading complex data analysis.
+Lead Analytics Engineer
+
+With over 10 years of experience, I specialize in designing and implementing data and analytics solutions that enhance business outcomes. My expertise spans from development to deployment, focusing on creating reliable, easy-to-use, and scalable frameworks.
+
+Certifications:
+
+Tableau & Snowflake Certified
+Expertise in Tableau (Desktop, Prep, Server), TabPy, and Salesforce CRM Analytics.
+Professional Highlights:
+
+Data Engineering: Directed large-scale migration projects and technology integrations. Developed processes and best practices that enhanced analytics adoption and implemented self-service data governance.
+Performance Management: Led KPI measurements for sales forecasting, opportunity analysis, and customer insights. Developed analytics solutions for SaaS metrics, product telemetry, and Customer 360.
+Business Insights: Delivered critical business insights by analyzing trends and identifying key performance issues, supporting strategic business growth.
+Cloud Data Warehousing: Integrated Tableau and CRM Analytics with Google BigQuery, Snowflake, and AWS cloud services. Developed data pipelines and transformations on Salesforce Sales Cloud.
+Data Pipeline Design: Designed end-to-end data pipelines for various data types using Snowflake and Tableau, prioritizing cost-efficiency and performance.
+Advanced Analytics Solutions: Developed comprehensive solutions using Snowflake, Tableau, AWS S3, Google BigQuery, and Looker Studio.
+Automation & Integration: Created a Tableau Slack App for enhanced operational efficiency and self-service capabilities. Developed API-driven automation for real-time data refresh.
+Strategic Leadership: Recommended actionable insights from data to optimize operations and reduce costs. Advocated for analytics best practices and mentored a large COE team.
+Technical Stack:
+
+Proficient in Python, Snowflake, Trino/Presto, Hive, Google BigQuery, AWS, Docker, Apache Airflow, SAP HANA, Business Objects, Databricks Spark, and DBT.
 <br>
           </p>
           <p><a class="btn btn-primary btn-lg" href="https://public.tableau.com/profile/jambesh#!/" target="_blank" role="button">Learn more &raquo;</a></p>
