--- a/index.html
+++ b/index.html
@@ -69,29 +69,31 @@
           <p>Passionate about data and visualizing data to draw meaningfull insight for community and users. 
             Love Community like Tableau Public, #MakeoverMonday to engage with felow viz lovers
             <br>
-            <br>
-Lead Analytics Engineer
+            <h1>Lead Analytics Engineer</h1>
 
-With over 10 years of experience, I specialize in designing and implementing data and analytics solutions that enhance business outcomes. My expertise spans from development to deployment, focusing on creating reliable, easy-to-use, and scalable frameworks.
+<p>With over 10 years of experience, I specialize in designing and implementing data and analytics solutions that enhance business outcomes. My expertise spans from development to deployment, focusing on creating reliable, easy-to-use, and scalable frameworks.</p>
 
-Certifications:
+<h2>Certifications</h2>
+<ul>
+    <li>Tableau & Snowflake Certified</li>
+    <li>Expertise in Tableau (Desktop, Prep, Server), TabPy, and Salesforce CRM Analytics</li>
+</ul>
 
-Tableau & Snowflake Certified
-Expertise in Tableau (Desktop, Prep, Server), TabPy, and Salesforce CRM Analytics.
-Professional Highlights:
+<h2>Professional Highlights</h2>
+<ul>
+    <li><strong>Data Engineering:</strong> Directed large-scale migration projects and technology integrations. Developed processes and best practices that enhanced analytics adoption and implemented self-service data governance.</li>
+    <li><strong>Performance Management:</strong> Led KPI measurements for sales forecasting, opportunity analysis, and customer insights. Developed analytics solutions for SaaS metrics, product telemetry, and Customer 360.</li>
+    <li><strong>Business Insights:</strong> Delivered critical business insights by analyzing trends and identifying key performance issues, supporting strategic business growth.</li>
+    <li><strong>Cloud Data Warehousing:</strong> Integrated Tableau and CRM Analytics with Google BigQuery, Snowflake, and AWS cloud services. Developed data pipelines and transformations on Salesforce Sales Cloud.</li>
+    <li><strong>Data Pipeline Design:</strong> Designed end-to-end data pipelines for various data types using Snowflake and Tableau, prioritizing cost-efficiency and performance.</li>
+    <li><strong>Advanced Analytics Solutions:</strong> Developed comprehensive solutions using Snowflake, Tableau, AWS S3, Google BigQuery, and Looker Studio.</li>
+    <li><strong>Automation & Integration:</strong> Created a Tableau Slack App for enhanced operational efficiency and self-service capabilities. Developed API-driven automation for real-time data refresh.</li>
+    <li><strong>Strategic Leadership:</strong> Recommended actionable insights from data to optimize operations and reduce costs. Advocated for analytics best practices and mentored a large COE team.</li>
+</ul>
 
-Data Engineering: Directed large-scale migration projects and technology integrations. Developed processes and best practices that enhanced analytics adoption and implemented self-service data governance.
-Performance Management: Led KPI measurements for sales forecasting, opportunity analysis, and customer insights. Developed analytics solutions for SaaS metrics, product telemetry, and Customer 360.
-Business Insights: Delivered critical business insights by analyzing trends and identifying key performance issues, supporting strategic business growth.
-Cloud Data Warehousing: Integrated Tableau and CRM Analytics with Google BigQuery, Snowflake, and AWS cloud services. Developed data pipelines and transformations on Salesforce Sales Cloud.
-Data Pipeline Design: Designed end-to-end data pipelines for various data types using Snowflake and Tableau, prioritizing cost-efficiency and performance.
-Advanced Analytics Solutions: Developed comprehensive solutions using Snowflake, Tableau, AWS S3, Google BigQuery, and Looker Studio.
-Automation & Integration: Created a Tableau Slack App for enhanced operational efficiency and self-service capabilities. Developed API-driven automation for real-time data refresh.
-Strategic Leadership: Recommended actionable insights from data to optimize operations and reduce costs. Advocated for analytics best practices and mentored a large COE team.
-Technical Stack:
+<h2>Technical Stack</h2>
+<p>Proficient in Python, Snowflake, Trino/Presto, Hive, Google BigQuery, AWS, Docker, Apache Airflow, SAP HANA, Business Objects, Databricks Spark, and DBT.</p>
 
-Proficient in Python, Snowflake, Trino/Presto, Hive, Google BigQuery, AWS, Docker, Apache Airflow, SAP HANA, Business Objects, Databricks Spark, and DBT.
-<br>
           </p>
           <p><a class="btn btn-primary btn-lg" href="https://public.tableau.com/profile/jambesh#!/" target="_blank" role="button">Learn more &raquo;</a></p>
         </div>
