--- a/aboutme.html
+++ b/aboutme.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Professional Bio - Wyatt L. Harlow</title>
+<title>Professional Bio - </title>
 <style>
   body {
     font-family: 'Helvetica', 'Arial', sans-serif;
