--- a/mermaid.html
+++ b/mermaid.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <body>
+    <h1> MERMAID DIAGRAM EXAMPLES </h1>
+    <hr></hr>
     <pre class="mermaid">
   mindmap
   root((mindmap))
